--- a/stile.css
+++ b/stile.css
@@ -1,4 +1,356 @@
-body{
-    background-color: rgb(167, 240, 240);
+@import url('https://fonts.googleapis.com/css2? family= Montserrat:wght@400;800 & family= Open+Sans:wght@400;700 & display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+:root{
+    --navbar:#F8F5FF;
+    --botão1:#845EF7;
+    --black:#000000;
+    --branco:#FFFFFF;
+    --borda:#D3D7DB;
+    --background-form:#30373E;
+    --cinzaclaro:#ADB5BD;
+}
+header{
+   
+    width: 93vh;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: var(--navbar);
+}
+.header__burguer{
+   
+    padding-left: 10px;
+    cursor: pointer;
+
 }
 
+
+.baner-1{    
+    background-image: url("assets/header/Imagem header.png");
+    background-position: center;
+    object-fit: cover;
+    background: cover;
+    margin-top: 20px;
+    background-size: cover;
+    width: 85vh;
+    Height: 80vh;
+    border-radius: 4%;
+    position: relative;
+    left:10%
+}
+.baner-1 h1{
+    font-family:" Montserrat";
+    font-weight: 700;
+    width: 95vh;
+    Height:258px;
+    font-size: 75px;
+    padding-top: 40px;
+    padding-left: 40px;
+}
+.baner-1 p{
+    font-family: "Open Sans";
+    font-weight:700;
+    font-size: 30px;
+    width: 62vh;  
+    Height:170px;
+    position: relative;
+    left: 8%;
+    top:-5vh
+
+   
+}
+.baner-button{
+    padding-left: 10px;
+    background-color: transparent;
+    border: 1px solid var(--botão1);
+    background-color: var(--botão1);
+    border-radius: 10px;
+    height: 10vh;
+    width: 40vh; 
+    position: relative;
+    top: -5vh;
+    left: 5vh;
+    cursor: pointer;
+}
+.baner-button span{
+    color: var(--branco);
+    font-family:" Montserrat";
+    font-weight: 700;
+    font-size: 5vh;
+}
+.titulos{
+    padding-top: 40px;
+    padding-left: 5vh;
+    font-family:" Montserrat";
+    font-weight: 700;
+    font-size: 9vh ;
+ 
+}
+.paragrafos{
+    padding-top: 30px;
+    padding-left: 40px;
+    font-family: "Open Sans";
+    font-size: 4vh;
+    font-weight: 400;
+    width: 83vh;
+ 
+    
+}
+.baner-2-1{
+  
+    position: relative;
+    left: 3vh;
+    top: 5vh;
+    width: 90vh;
+    border-radius: 8vh;
+   
+}
+.baner-2-h2{
+    position: absolute;
+    top:240vh;
+    left: 3vh;
+    font-family: "Open Sans";
+    font-weight: 700;
+    font-size: 4vh;
+    padding-left: 30px;
+    padding-top: 30px;
+    align-items: center;
+    border-radius: 8%;
+    border: var(--borda) 2px solid;
+    background-color: var(--branco);
+    width: 90vh;
+    height: 50vh;
+    
+
+}
+
+.botão{
+    appearance: none;
+    background-color: transparent;
+    border: solid 2px var(--botão1);
+    border-radius: 8px;
+    padding-left: 3px;
+    position: relative;
+    top: 1vh;
+    left: 5vh;
+    height: 10vh;
+    width: 85vh;
+   
+}
+.baner-2 span{
+    color: var(--botão1);
+    font-family:" Montserrat";
+   font-weight: 700;
+   font-size: 5vh;
+}
+.dado{
+    position: relative;
+    top: 19vh;
+    left:4vh;
+    border: var(--borda) 2px solid;
+    border-radius: 50px;
+    background-color: var(--branco);
+    height: 60vh;
+    width:88vh;
+    padding-top: 30px;
+    padding-left: 40px; 
+    padding-block: 30px;
+    margin-top: 20px;
+
+}
+.titulo-2{
+    padding-top: 30px;
+    font-family: "Open Sans";
+    font-weight: 700;
+    font-size: 30px;
+    position: relative;
+    left: 30px;
+
+}
+.baner-3{
+    position: relative;
+    top: 30vh
+}
+.img{
+    width: 85vh;
+    height: 40vh;
+    position: relative;
+    left: 30px;
+
+}
+.Vantagens{
+    position:relative;
+    top:50vh;
+}
+.Mais{
+    appearance: none;
+    background-color:var(--botão1);
+    border: solid 2px var(--botão1);
+    border-radius: 10px;
+    padding-left: 3px;
+    position: relative;
+    top: 11vh;
+    left: 5vh;
+    height: 15vh;
+    width: 38vh;
+}
+.Mais_1{
+    font-family:" Montserrat";
+    font-weight: 700;
+    color: var(--branco);
+    font-size: 5vh;
+
+}
+.Contrate{
+    appearance: none;
+    background-color: transparent;
+    border: solid 2px var(--botão1);
+    border-radius: 10px;
+    padding-left: 3px;
+    position: relative;
+    top: -4vh;
+    left: 50vh;
+    height: 15vh;
+    width: 38vh;
+   
+
+}
+.nos{
+   color: var(--botão1);
+   font-family:" Montserrat";
+   font-weight: 700;
+   font-size: 5vh;
+}
+.icones{
+    position: relative;
+    top:5vh;
+    border: var(--borda)solid 2px ;
+    width: 92vh;
+    height: 55vh;
+    border-radius: 30px;
+    padding-left: 5vh;
+    padding-top: 5vh;
+    display: flex;
+    margin-top: 5vh;
+
+}
+.globo{
+    width: 7vh;
+    height: 7vh;
+    position: relative;
+    top: 3vh;
+}
+.servicos{
+    position: relative;
+    top: 60vh;
+}
+.img_2{
+    position: relative;
+    top: 10vh;
+    
+}
+.img_2-1{
+    width: 92vh;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    margin-top: 70px;
+}
+.titulo-3{
+    font-family: "Open Sans";
+    font-weight: 700;
+    font-size: 5vh;
+    color: var(--botão1);
+    margin-top: 30px;
+    margin-left: 30px;
+    
+}
+.loren{
+   position: relative;
+   left: 80vh;
+   top: -5vh;
+   appearance: none;
+   background-color: transparent;
+   border: transparent;
+   width: 50px;
+   height: 40px;
+
+}
+.footer{
+    position: relative;
+    top:70vh;
+    background-color: var(--black);
+    width: 88vh;
+    
+
+}
+.envie{
+    color: var(--branco);
+    font-size: 10vh;
+}
+.form_cadastro{
+    position: relative;
+    left: 5vh;
+    top:5vh;
+
+}
+.form__campo{
+    background-color: var(--background-form);
+    width: 75vh;
+    height: 8vh;
+    border-radius: 10px;
+    margin-top: 30px;
+}
+.form__campo_1{
+    font-family: "Open Sans";
+    color: var(--cinzaclaro);
+    font-weight: 400;
+    appearance: none;
+    background-color: transparent;
+    border: transparent;
+    position: relative;
+    left: 5vh;
+    top:8px;
+    font-size: 4vh;
+    align-items: center;
+
+}
+.concluir{
+    appearance: none;
+    background-color: var(--botão1);
+    border: solid 2px var(--botão1);
+    border-radius: 8px;
+    padding-left: 3px;
+    position: relative;
+    top: 5vh;
+    height: 10vh;
+    width: 75vh;
+
+} 
+.concluir_1 {
+   position: relative;
+   top: 10px;
+   color: var(--branco);
+   font-family:" Montserrat";
+   font-weight: 700;
+   font-size: 5vh;
+}
+.paragrafo span{
+    
+    color: var(--branco);
+    position: relative;
+    top:10vh;
+    left: 5vh;
+    font-size: 40px;
+    
+}
+.checkbox{
+    color: var(--branco);
+    font-size: 30px;
+    position: relative;
+    top: 30px;
+}
