--- a/stile.css
+++ b/stile.css
@@ -4,9 +4,8 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
-    background-color: aquamarine;
-}
+
+
 :root{
     --navbar:#F8F5FF;
     --botão1:#845EF7;
@@ -16,9 +15,10 @@ body{
     --background-form:#30373E;
     --cinzaclaro:#ADB5BD;
 }
-header{
+header { 
+    
    
-    width: 72vh;
+    width: 99vw;
     height: 80px;
     display: flex;
     align-items: center;
@@ -27,38 +27,36 @@ header{
     border-bottom-left-radius: 30px ;
     border-bottom-right-radius: 30px;
 }
-.header__burguer{
-
-    padding-left: 10px;
-    cursor: pointer;
-    appearance: none;
-    border: 0;
-    background-color: transparent;
+.menu_burguerr{
+    display: none;
+    position: absolute;
+    background-color: #FFFFFF;
 
 
 }
-.lupa{
+.menu_burguerr::hover{
+    display: block;
+}
+.header_button{
     position: relative;
-    right: 30px;
+    padding: 30px;
     cursor: pointer;
     appearance: none;
     border:0;
     background-color: transparent;
-
-   
-
+ 
 }
 
 
 .baner-1{    
     background-image: url("assets/header/Imagem header.png");
-    background-position: center;
+    background-position: bottom ;
     object-fit: cover;
     background: cover;
     margin-top: 20px;
     background-size: cover;
-    width: 67vh;
-    Height: 80vh;
+    width: 88vw;
+    Height: 50vh;
     border-radius: 4%;
     position: relative;
     left:5%
@@ -66,21 +64,21 @@ header{
 .baner-1 h1{
     font-family:" Montserrat";
     font-weight: 700;
-    width: 50vh;
+    width: 30vw;
     Height:258px;
-    font-size: 40px;
-    padding-top: 40px;
-    padding-left: 40px;
+    font-size: 25px;
+    padding-top: 20px;
+    padding-left: 8%;
 }
 .baner-1 p{
     font-family: "Open Sans";
     font-weight:700;
-    font-size: 30px;
-    width: 62vh;  
-    Height:170px;
+    font-size: 20px;
+    width: 62vw;  
+    Height:20px;
     position: relative;
     left: 8%;
-    bottom: 10vh;
+    bottom: 37%;
 
    
 }
@@ -90,72 +88,74 @@ header{
     border: 1px solid var(--botão1);
     background-color: var(--botão1);
     border-radius: 10px;
-    height: 10vh;
-    width: 40vh; 
+    height: 5vh;
+    width: 50vw; 
     position: relative;
-    top: -5vh;
-    left: 5vh;
+    top: 3vh;
+    left: 5%;
     cursor: pointer;
 }
 .baner-button span{
     color: var(--branco);
     font-family:" Montserrat";
     font-weight: 700;
-    font-size: 5vh;
+    font-size: 5vw;
 }
 .titulos{
     padding-top: 40px;
-    padding-left: 5vh;
+    padding-left: 5%;
     font-family:" Montserrat";
     font-weight: 700;
-    font-size: 9vh ;
+    font-size: 40px ;
  
 }
 .paragrafos{
     padding-top: 30px;
-    padding-left: 40px;
+    padding-left: 20px;
     font-family: "Open Sans";
-    font-size: 4vh;
+    font-size: 20px;
     font-weight: 400;
-    width: 70vh;
+    width: 93vw;
    
  
     
 }
 .paragrafos-2{
-    padding-top: 15px;
-    padding-left: 40px;
+    
     font-family: "Open Sans";
-    font-size: 4vh;
+    font-size: 20px;
     font-weight: 400;
-    width: 55vh;
+    width: 75vw;
+    position: relative;
+    top: -10%;
+    left: -9%;
    
 
 }
 .baner-2-1{
   
     position: relative;
-    left: 3vh;
+    left: 3%;
     top: 5vh;
-    width: 65vh;
+    width: 92vw;
     border-radius: 8vh;
    
 }
 .baner-2-h2{
     position: absolute;
-    top:240vh;
-    left: 3vh;
+    top:390vw;
+    left: 3%;
     font-family: "Open Sans";
     font-weight: 700;
-    font-size: 4vh;
+    font-size: 6vw;
     padding-left: 30px;
     padding-top: 30px;
     align-items: center;
     border-radius: 8%;
     border: var(--borda) 2px solid;
     background-color: var(--branco);
-    width: 65vh;
-    height: 50vh;
+    width: 92vw;
+    height: 30vh;
     
 
 }
@@ -169,74 +169,102 @@ header{
     position: relative;
     top: 15vh;
     left: 5vh;
-    height: 10vh;
-    width: 62vh;
+    height: 5vh;
+    width: 62vw;
    
 }
 .baner-2 span{
    color: var(--botão1);
    font-family:" Montserrat";
    font-weight: 700;
-   font-size: 5vh;
+   font-size: 20px;
 }
 .dado{
     position: relative;
-    top: 25vh;
-    left:4vh;
+    top: 18vh;
+    left:4%;
     border: var(--borda) 2px solid;
-    border-radius: 50px;
+    border-radius: 40px;
     background-color: var(--branco);
-    height: 65vh;
-    width:65vh;
+    height: 35vh;
+    width:90vw;
     padding-top: 30px;
     padding-left: 40px; 
     padding-block: 30px;
     margin-top: 20px;
 
 }
+.dado_1{
+    height: 40px;
+    width: 40px;
+    position: relative;
+    top: -20px;
+    left: -5vw;
+}
 .titulo-2{
-    padding-top: 30px;
+    
+    width: 70vw;
     font-family: "Open Sans";
     font-weight: 700;
-    font-size: 30px;
+    font-size: 20px;
     position: relative;
-    left: 30px;
+    left: -20px;
+    top: -20px
 
+}
+.titulos__{
+    
+   padding-left: 5%;
+   font-family:" Montserrat";
+   font-weight: 700;
+   font-size: 40px ;
+   margin-top: -25%;
 }
 .baner-3{
     position: relative;
     top: 30vh;
+    
 
 }
 .img{
-    width: 65vh;
-    height: 40vh;
+    width: 90vw;
+    height: 15vh;
     position: relative;
-    left: 3px;
+    left: -20px;
     margin: 30px;
 
 }
+.titulo_2{
+    width: 70vw;
+    font-family: "Open Sans";
+    font-weight: 700;
+    font-size: 20px;
+    position: relative;
+    left: 20px;
+    top: -10px
+
+}
 .Vantagens{
-    position:relative;
-    top:50vh;
+   margin-top: 280px;
+   margin-left: -2%;
+   
 }
 .Mais{
     appearance: none;
     background-color:var(--botão1);
     border: solid 2px var(--botão1);
     border-radius: 10px;
-    padding-left: 3px;
     position: relative;
-    top: 11vh;
-    left: 5vh;
-    height: 15vh;
-    width: 30vh;
+    top: 10vh;
+    left: 2vh;
+    height: 5vh;
+    width: 45vw;
 }
 .Mais_1{
     font-family:" Montserrat";
     font-weight: 700;
     color: var(--branco);
-    font-size: 5vh;
+    font-size: 25px;
 
 }
 .Contrate{
@@ -244,12 +272,12 @@ header{
     background-color: transparent;
     border: solid 2px var(--botão1);
     border-radius: 10px;
-    padding-left: 3px;
+    padding-left: -5px;
     position: relative;
-    top: -4vh;
-    left: 40vh;
-    height: 15vh;
-    width:  30vh;
+    top: 10vh;
+    left: 2vh;
+    height: 5vh;
+    width:  45vw;
    
 
 }
@@ -257,87 +285,98 @@ header{
    color: var(--botão1);
    font-family:" Montserrat";
    font-weight: 700;
-   font-size: 5vh;
+   font-size: 22px;
 }
 .icones{
     position: relative;
-    top:5vh;
+    top: 10%;
     border: var(--borda)solid 2px ;
-    width: 65vh;
-    left: 30px;
+    width: 90vw;
+    left: 15px;
     height: 55vh;
     border-radius: 30px;
     padding-left: 5vh;
     padding-top: 5vh;
     display: flex;
-    margin-top: 5vh;
+    margin-top: 5%;
    
 
 }
 .globo{
-    width: 7vh;
+    width: 15vw;
     height: 7vh;
     position: relative;
    
 }
 .servicos{
     position: relative;
-    top: 60vh;
+    top: 10%;
 }
 .img_2{
     position: relative;
-    top: 10vh;
+    top: 10px;
     
 }
 .img_2-1{
-    width: 65vh;
-    border-top-left-radius: 30px;
-    border-top-right-radius: 30px;
-    margin-top: 70px;
+    
+    width: 88vw;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
     position: relative;
-    left: 30px;
+    left: 10px;
+    top: 10px;
 }
 .titulo-3{
     font-family: "Open Sans";
     font-weight: 700;
-    font-size: 5vh;
+    font-size: 25px;
     color: var(--botão1);
-    margin-top: 30px;
+    margin-top: 15px;
     margin-left: 30px;
     
 }
 .loren{
    position: relative;
-   left: 80vh;
-   top: -5vh;
+   left: 35vh;
+   top: -32px;
    appearance: none;
    background-color: transparent;
    border: transparent;
    width: 50px;
-   height: 40px;
+   height: 30px;
 
+}
+.paragrafos__{
+    margin-top: 10px;
+    margin-left: 10px;
+    font-family: "Open Sans";
+    font-size: 20px;
+    font-weight: 400;
+    width: 93vw;
 }
 .footer{
     position: relative;
-    top:70vh;
+    top:100px;
     background-color: var(--black);
-    width: 71vh;
+    width: 97vw;
+    height: 180vh;
     
 
 }
 .envie{
     color: var(--branco);
-    font-size: 10vh;
+    font-size: 100%;
 }
 .form_cadastro{
     position: relative;
-    left: 5vh;
+    left: 10px;
     top:5vh;
 
 }
 .form__campo{
-    background-color: var(--background-form);
-    width: 65vh;
+    background-color:var(--background-form);
+    color: var(--cinzaclaro);
+    width: 85vw;
     height: 8vh;
     border-radius: 10px;
     margin-top: 30px;
@@ -356,6 +395,10 @@ header{
     align-items: center;
 
 }
+.form__campo_1::placeholder{
+    color:var(--cinzaclaro)
+    
+}
 .concluir{
     appearance: none;
     background-color: var(--botão1);
@@ -363,33 +406,39 @@ header{
     border-radius: 20px;
     padding-left: 3px;
     position: relative;
-    top: 5vh;
-    height: 10vh;
-    width: 65vh;
+    top: 15px;
+    height: 5vh;
+    width: 90vw;
 
 } 
 .concluir_1 {
    position: relative;
-   top: 5px;
+   top: 3px;
    color: var(--branco);
    font-family:" Montserrat";
    font-weight: 700;
-   font-size: 5vh;
+   font-size: 20px;
 }
 .paragrafo span{
     
     color: var(--branco);
     position: relative;
     top:10vh;
-    left: 5vh;
-    font-size: 35px;
-    width: 15vh;
+    left: 5px;
+    font-size: 20px;
+    
     
 }
 .checkbox{
     color: var(--branco);
-    font-size: 27px;
+    font-size: 15px;
     margin-top: 40px;
-    
-
+    margin-left: 5px;
+    transform: scale(1.5);
+    padding: 10px;
+}
+.logo{
+    position: relative;
+    left: 10px;
+    top:90px
 }
